refactor(gcp): require existing deployment project
